# Digital-Signage-Project

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  worker-entrypoint.sh
backend/config/: settings.py  urls.py
backend/signage/: admin.py  api.py  api_urls.py  apps.py  authentication.py  forms.py  integrity.py  middleware.py  models.py  services.py  urls.py  views.py
backend/signage/management/commands/: apply_retention.py  check_deployment_readiness.py  create_initial_owner.py  create_pilot_backup.py  evaluate_device_health.py  evaluate_playlists.py  process_media.py  verify_pilot_backup.py
backend/signage/migrations/: 0001_initial.py  0002_platformsettings.py  0003_loginthrottle.py  0004_device_kiosk_pin_hash_device_kiosk_pin_reset_at.py  0005_hardwarequalification.py  0006_production_hardening.py  0007_playlist_supersession.py
backend/signage/static/signage/: app.css  playlist_detail.js
backend/signage/tests/: test_auth.py  test_device_api.py  test_enrollment.py  test_integrity.py  test_media_processing.py  test_operations.py  test_playlists.py  test_retention.py
backend/templates/: base.html
backend/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.txt  password_reset_form.html
backend/templates/signage/: alert_list.html  dashboard.html  device_list.html  enrollment_code.html  form.html  kiosk_pin.html  media_list.html  playlist_detail.html  playlist_list.html  user_list.html
(+42 files in other folders)
